add random holiday track support